<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/dimen_size_20"
        tools:context=".screens.AddMedicineActivity">


        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_pills"
            android:layout_margin="@dimen/dimen_size_20"
            android:layout_width="@dimen/dimen_size_150"
            android:layout_height="@dimen/dimen_size_150"/>


        <TextView
            style="@style/TextStyle"
            android:layout_marginTop="@dimen/dimen_size_20"
            android:text="@string/name_of_medicine"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_medicine_name"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_size_5"
            android:background="@drawable/edittext_border"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="@dimen/dimen_size_10"
            android:singleLine="true" />

        <TextView
            style="@style/TextStyle"
            android:layout_marginTop="@dimen/dimen_size_20"
            android:text="@string/add_a_description"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_medicine_description"
            style="@style/TextStyle"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_size_5"
            android:background="@drawable/edittext_border"
            android:lines="10"
            android:padding="@dimen/dimen_size_10" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_size_50"
            android:text="@string/save" />

    </LinearLayout>
</RelativeLayout>