<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.TranslateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_add">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_size_10">


            <EditText
                android:id="@+id/edt_input_text"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:background="@drawable/edittext_border"
                android:gravity="top"
                android:hint="@string/enter_your_text_in_eng"
                android:lines="6"
                android:padding="@dimen/dimen_size_10" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_size_10"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dimen_size_5"
                    android:layout_marginRight="@dimen/dimen_size_5"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_bg">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spn_language"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dimen_size_5"
                        android:spinnerMode="dropdown" />

                </FrameLayout>

                <Button
                    android:id="@+id/btn_translate"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:paddingStart="@dimen/dimen_size_50"
                    android:paddingLeft="@dimen/dimen_size_50"
                    android:paddingEnd="@dimen/dimen_size_50"
                    android:paddingRight="@dimen/dimen_size_50"
                    android:text="@string/translate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_size_1"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:background="@drawable/edittext_border" />

            <TextView
                style="@style/TextStyle"
                android:layout_marginStart="@dimen/dimen_size_10"
                android:layout_marginLeft="@dimen/dimen_size_10"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:layout_marginEnd="@dimen/dimen_size_10"
                android:layout_marginRight="@dimen/dimen_size_10"
                android:text="@string/output"
                android:textSize="@dimen/dimen_size_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_output_text"
                style="@style/TextStyle"
                android:layout_marginStart="@dimen/dimen_size_10"
                android:layout_marginLeft="@dimen/dimen_size_10"
                android:layout_marginTop="@dimen/dimen_size_10"
                android:layout_marginEnd="@dimen/dimen_size_10"
                android:layout_marginRight="@dimen/dimen_size_10"
                android:text="" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_update"
        style="@style/ButtonStyle"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/update" />

</RelativeLayout>